# chombopy

./: .gitignore  README.md  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml  publish.yml  run-tests.yaml  run_unit_tests.yaml
chombopy/: inputs.py  plotfile.py  plotting.py  time_table.py
chombopy.egg-info/: PKG-INFO  SOURCES.txt
docs/: =0.5.0  Makefile  conf.py  examples.rst  index.rst  inputs.rst  installation.rst  make.bat  plotting-ref.rst  plotting.rst  time_table-ref.rst  timing.rst
docs/_build/doctrees/: README.doctree  api.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  inputs-ref.doctree  inputs.doctree  installation.doctree  plotting-ref.doctree  plotting.doctree  quickstart.doctree  readme_lnk.doctree
docs/_build/html/: .buildinfo  README.html  api.html  contributing.html  examples.html  genindex.html  index.html  inputs-ref.html  inputs.html  installation.html  objects.inv  plotting-ref.html  plotting.html  py-modindex.html  quickstart.html  readme_lnk.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  inputs.html
docs/_build/html/_modules/chombopy/: inputs.html  plotfile.html  plotting.html
docs/_build/html/_sources/: api.rst.txt  contributing.rst.txt  inputs-ref.rst.txt  quickstart.rst.txt
examples/: example_plotting.py  example_time_table.py
tests/: pytest.ini  test_inputs.py  test_plotfile.py  test_plotting.py  test_time_table.py
tests/data/: time.table.0  time.table.simple
tests/data/3D/: chk000100.3d.hdf5
