[metadata]
name = chombopy
version = file: version.txt
long_description = Running, analysing and plotting Chombo simulations
author = Jamie Parkinson
author_email = jamie.parkinson@gmail.com
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt

[options.package_data]
* = *.txt, *.md

[tool:pytest]
addopts = --cov=chombopy --cov-report html:docs/test/coverage --html=docs/test/report.html